[gd_scene load_steps=3 format=3 uid="uid://bmywob5ku4c3r"]

[ext_resource type="Script" uid="uid://yegm8nhcoeqc" path="res://Gui/factory_window.gd" id="1_rucvl"]
[ext_resource type="PackedScene" uid="uid://b7bmwfo2vrstf" path="res://Gui/cargo_info_pop_up.tscn" id="2_68ml3"]

[node name="factory_window" type="Window"]
initial_position = 1
size = Vector2i(500, 400)
script = ExtResource("1_rucvl")

[node name="Name" type="RichTextLabel" parent="."]
offset_right = 750.0
offset_bottom = 40.0
bbcode_enabled = true
scroll_active = false

[node name="Cargo_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -120.0
offset_right = -170.0
offset_bottom = -80.0
grow_horizontal = 0
grow_vertical = 2

[node name="Cargo_List" type="ItemList" parent="Cargo_Node"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="Cargo_Node"]
layout_mode = 0
offset_top = -40.0
offset_right = 300.0
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="Label" type="Label" parent="Cargo_Node/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Cargo List:"

[node name="Price_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 70.0
offset_bottom = 120.0

[node name="Price_List" type="ItemList" parent="Price_Node"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 300.0
focus_mode = 0

[node name="ColorRect" type="ColorRect" parent="Price_Node"]
layout_mode = 0
offset_top = -40.0
offset_right = 200.0
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="Label" type="Label" parent="Price_Node/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Local Prices:"

[node name="Cash" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Level" type="Label" parent="."]
offset_left = 417.0
offset_top = 5.0
offset_right = 466.0
offset_bottom = 28.0
text = "Level: "

[node name="Connected" type="Label" parent="."]
offset_left = 151.0
offset_top = 2.0
offset_right = 216.0
offset_bottom = 25.0
text = "Connected: 1"

[node name="CargoInfoPopUp" parent="." instance=ExtResource("2_68ml3")]
handle_input_locally = false
visible = false

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="mouse_entered" from="Price_Node/Price_List" to="." method="_on_price_list_mouse_entered"]
[connection signal="mouse_exited" from="Price_Node/Price_List" to="." method="_on_price_list_mouse_exited"]
[connection signal="popup_requested" from="CargoInfoPopUp" to="." method="_on_cargo_info_pop_up_popup_requested"]
